--- a/select-exam.html
+++ b/select-exam.html
@@ -8,21 +8,22 @@
 
     <meta http-equiv="content-language" content="vi" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Trang web chính thức của kỳ thi Hương" >
-    <meta name="keywords" content="thi hương, kỳ thi hương, thi hương thời lê, thi trắc nghiệm, bảng vàng, đỗ đạt, làm quan, hiền tài là nguyên khí quốc gia, hiền tài, Lê Đại Hành, thi quoc gia, hien tai la nguyen khi quoc gia, thi, thi huong, nha le, ky thi huong" >
+    <meta name="description" content="Trang web chính thức của kỳ thi Hương">
+    <meta name="keywords"
+        content="thi hương, kỳ thi hương, thi hương thời lê, thi trắc nghiệm, bảng vàng, đỗ đạt, làm quan, hiền tài là nguyên khí quốc gia, hiền tài, Lê Đại Hành, thi quoc gia, hien tai la nguyen khi quoc gia, thi, thi huong, nha le, ky thi huong">
     <meta name="revisit-after" content="1 days" />
     <meta name="robots" content="noodp,index,follow" />
     <meta name="google-site-verification" content="hLKr7AIG0s_bxOvFV534GESJnOVFfBtZbyoz8yid97Q" />
-    
+
     <title>Chọn đề | Kỳ thi Hương Quốc gia</title>
 
-    <link href="./assets/icons/logo.ico" rel="shortcut icon" type="image/x-icon"/>
+    <link href="./assets/icons/logo.ico" rel="shortcut icon" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <link rel="stylesheet" href="./bower_components/bootstrap-4.3.1-dist/css/bootstrap-grid.css" >
+    <link rel="stylesheet" href="./bower_components/bootstrap-4.3.1-dist/css/bootstrap-grid.css">
     <link rel="stylesheet" href="./assets/styles/styles.css">
     <link rel="stylesheet" href="./assets/styles/partials.css">
     <link rel="stylesheet" href="./assets/styles/exam.css">
-   
+
 </head>
 
 <body>
@@ -64,27 +65,27 @@
                         </li>
                     </ul>
                     <ul id="mySidenav" class="main-nav-mob">
-                            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                            <li>
-                                <a class="main-nav__home img-rounded" href="./index.html">Home</a>
-                            </li>
-                            <li>
-                                <a class="main-nav__exam img-rounded" href="./select-exam.html">Vào thi</a>
-                            </li>
-                            <li>
-                                <a class="main-nav__rank img-rounded" href="/index.html#golden-rank"> Rank</a>
-                            </li>
-                            <li>
-                                <a class="main-nav__lib img-rounded" href="#">Thư viện</a>
-                            </li>
-                            <li>
-                                <a class="main-nav__event img-rounded" href="#"> Sự kiện</a>
-                            </li>
+                        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                        <li>
+                            <a class="main-nav__home img-rounded" href="./index.html">Home</a>
+                        </li>
+                        <li>
+                            <a class="main-nav__exam img-rounded" href="./select-exam.html">Vào thi</a>
+                        </li>
+                        <li>
+                            <a class="main-nav__rank img-rounded" href="/index.html#golden-rank"> Rank</a>
+                        </li>
+                        <li>
+                            <a class="main-nav__lib img-rounded" href="#">Thư viện</a>
+                        </li>
+                        <li>
+                            <a class="main-nav__event img-rounded" href="#"> Sự kiện</a>
+                        </li>
 
-                            <li>
-                                <a class="main-nav__contact img-rounded " href="#">Liên hệ</a>
-                            </li>
-                        </ul>
+                        <li>
+                            <a class="main-nav__contact img-rounded " href="#">Liên hệ</a>
+                        </li>
+                    </ul>
                 </div>
                 <div id="btn-open-menu" class="btn-menu">
                     <img src="./assets/icons/three-dot-menu.png">
@@ -273,7 +274,14 @@
         </div>
     </main>
     <footer>
-        Powered by thinhnnd & thupx
+        <div class="container">
+            <div class="row">
+                <div class="col-12 copyright">
+                    <h4>&copy; Kỳ thi Hương Quốc gia</h4>
+                    <p>Designed by thinhnnd and pxt</p>
+                </div>
+            </div>
+        </div>
     </footer>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
 
