--- a/add-question.html
+++ b/add-question.html
@@ -105,5 +105,15 @@
 
     <script src="./assets/js/web-adminjs.js"></script>
 </body>
+<footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 copyright">
+                    <h4>&copy; Kỳ thi Hương Quốc gia</h4>
+                    <p>Designed by thinhnnd and pxt</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 </html>
