--- a/index.html
+++ b/index.html
@@ -222,7 +222,14 @@
         </section>
     </main>
     <footer>
-        Powered by thinhnnd & thupx
+        <div class="container">
+            <div class="row">
+                <div class="col-12 copyright">
+                    <h4>&copy; Kỳ thi Hương Quốc gia</h4>
+                    <p>Designed by thinhnnd and pxt</p>
+                </div>
+            </div>
+        </div>
     </footer>
     <script
     src="bower_components/jquery/dist/jquery.min.js"></script>
